--- a/_config.yml
+++ b/_config.yml
@@ -95,17 +95,7 @@ chrome-tab-theme-color: "#000000"
 service-worker: true
 
 # 数学公式
-<script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
-        tex2jax: {
-        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
-        inlineMath: [['$','$']]
-        }
-    });
-</script>
-<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
-
-
+markdown: kramdown
 
 # Friends
 # friends: [
